--- a/main/src/main/resources/config.properties
+++ b/main/src/main/resources/config.properties
@@ -53,7 +53,7 @@ org.osgi.framework.system.packages.extra=sun.reflect, sun.awt, com.sun.awt, com.
 # The following property controls whether the bundle cache is flushed
 # the first time the framework is initialized. Possible values are
 # "none" and "onFirstInit"; the default is "none".
-#org.osgi.framework.storage.clean=onFirstInit
+org.osgi.framework.storage.clean=onFirstInit
 
 # The following property determines which actions are performed when
 # processing the auto-deploy directory. It is a comma-delimited list of
