removed osgi config flag to always reset bundle cache

--- a/main/src/main/resources/config.properties
+++ b/main/src/main/resources/config.properties
@@ -25,8 +25,33 @@
 
 # To append packages to the default set of exported system packages,
 # set this value.
-#org.osgi.framework.system.packages.extra=
-org.osgi.framework.system.packages.extra=sun.reflect, sun.awt, com.sun.awt, com.sun.java.swing.plaf.windows, com.apple.eawt, org.w3c.dom,org.w3c.dom.traversal, org.w3c.dom.xpath, org.w3c.dom.events, javax.swing, javax.swing.plaf, javax.swing.plaf.basic, javax.swing.table, javax.swing.text, javax.swing.tree, javax.imageio, javax.swing.border, javax.swing.event, com.apple.laf, apple.laf, com.sun.java.swing.plaf.windows, com.sun.javadoc, com.sun.org.apache.xml.internal.serialize, oracle.xml.parser, oracle.xml.parser.v2
+org.osgi.framework.system.packages.extra= \
+ sun.misc, \
+ sun.reflect, \
+ sun.awt, \
+ com.sun.awt, \
+ com.sun.java.swing.plaf.windows, \
+ com.apple.eawt, \
+ org.w3c.dom, \
+ org.w3c.dom.traversal, \
+ org.w3c.dom.xpath, \
+ org.w3c.dom.events, \
+ javax.swing, \
+ javax.swing.plaf, \
+ javax.swing.plaf.basic, \
+ javax.swing.table, \
+ javax.swing.text, \
+ javax.swing.tree, \
+ javax.imageio, \
+ javax.swing.border, \
+ javax.swing.event, \
+ com.apple.laf, \
+ apple.laf, \
+ com.sun.java.swing.plaf.windows, \
+ com.sun.javadoc, \
+ com.sun.org.apache.xml.internal.serialize, \
+ oracle.xml.parser, \
+ oracle.xml.parser.v2
 
 # The following property makes specified packages from the class path
 # available to all bundles. You should avoid using this property.
@@ -53,7 +78,7 @@ org.osgi.framework.system.packages.extra=sun.reflect, sun.awt, com.sun.awt, com.
 # The following property controls whether the bundle cache is flushed
 # the first time the framework is initialized. Possible values are
 # "none" and "onFirstInit"; the default is "none".
-org.osgi.framework.storage.clean=onFirstInit
+#org.osgi.framework.storage.clean=onFirstInit
 
 # The following property determines which actions are performed when
 # processing the auto-deploy directory. It is a comma-delimited list of
