--- a/core/common/pom.xml
+++ b/core/common/pom.xml
@@ -36,6 +36,11 @@
             <artifactId>genoviz</artifactId>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>com.lorainelab</groupId>
+            <artifactId>bundle-info</artifactId>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
     
@@ -56,7 +61,7 @@
                         <Embed-Dependency>*;scope=compile|runtime;inline=true</Embed-Dependency>
                         <Embed-Transitive>true</Embed-Transitive>
                         <Include-Resource>
-                            {maven-resources}, {maven-dependencies}
+                            {maven-resources}
                         </Include-Resource>       
                         <Import-Package>*;resolution:=optional</Import-Package>
                         <Bundle-Activator>com.affymetrix.common.Activator</Bundle-Activator>
