fixed bugs in the survey and update plugins for the 8.1.13 release.  This release is needed so we are able to announce the igb-8.2 release to 8.1.x users

--- a/plugins/Update/ant.properties
+++ b/plugins/Update/ant.properties
@@ -1,4 +1,4 @@
 name=Update
 project=Update
-classpath=${igb_service}/build:${window_service}/build:${common}/build:${genometry}/build:${genoviz}/build:${osgi.impl}
+classpath=${igb_service}/build:${window_service}/build:${common}/build:${genometry}/build:${genoviz}/build:${osgi.impl}:${lib.dir}/guava-16.0.1.jar:${lib.dir}/commons-lang3-3.1.jar
 plugin-jar=true
