completed improvements to custom genome dialog described in https://jira.transvar.org/browse/IGBF-287

--- a/core/igb/pom.xml
+++ b/core/igb/pom.xml
@@ -112,6 +112,11 @@
             <artifactId>swing-layout</artifactId>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.swinglabs.swingx</groupId>
+            <artifactId>swingx-all</artifactId>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
     <build>
