refactored bookmarks plugin to meet new logging standards of the project

--- a/plugins/Bookmark/pom.xml
+++ b/plugins/Bookmark/pom.xml
@@ -75,6 +75,13 @@
             <artifactId>jide-ultimate</artifactId>
             <scope>provided</scope>
         </dependency>
+        <!--Start of logging dependencies-->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <!--End of logging dependencies-->
     </dependencies>
 
     <build>
