added new console gui module added logging configuration fragment bundle for putting the logging configuration file on the classpath for logback to pick it up across bundle boundaries cleaned up some logging code updated build for including the appropriate bundles where needed removed old logging configuration files

--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,5 @@ www/release_notes/images/Thumbs.db
 .ant-targets-build.xml
 /plugins/IGBR/target/
 extbundles/*
+/plugins/ConsoleGui/target/
+/core/LoggingConfig/target/
