--- a/core/igb/pom.xml
+++ b/core/igb/pom.xml
@@ -117,6 +117,18 @@
             <artifactId>swingx-all</artifactId>
             <scope>provided</scope>
         </dependency>
+        <!--Start of logging dependencies-->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <!--End of logging dependencies-->
+        <dependency>
+            <groupId>com.lorainelab</groupId>
+            <artifactId>console-gui</artifactId>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
     <build>
