--- a/pom.xml
+++ b/pom.xml
@@ -468,6 +468,12 @@
             </dependency>
             <dependency>
                 <groupId>com.lorainelab</groupId>
+                <artifactId>logging-config</artifactId>
+                <version>${logging-config-version}</version>
+                <scope>provided</scope>
+            </dependency>
+            <dependency>
+                <groupId>com.lorainelab</groupId>
                 <artifactId>paired-data-preprocessor</artifactId>
                 <version>${paired-data-preprocessor-version}</version>
                 <scope>provided</scope>
