--- a/plugins/Tutorial/pom.xml
+++ b/plugins/Tutorial/pom.xml
@@ -61,6 +61,13 @@
             <artifactId>window-service</artifactId>
             <scope>provided</scope>
         </dependency>
+        <!--Start of logging dependencies-->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <!--End of logging dependencies-->
     </dependencies>
 
     <build>
