added logging dependency

--- a/plugins/AnnotationTab/pom.xml
+++ b/plugins/AnnotationTab/pom.xml
@@ -14,7 +14,7 @@
 
     <name>Annotation Tab</name>
 
-    <dependencies>        
+    <dependencies>
         <dependency>
             <groupId>com.affymetrix</groupId>
             <artifactId>igb</artifactId>
@@ -60,6 +60,13 @@
             <artifactId>jide-ultimate</artifactId>
             <scope>provided</scope>
         </dependency>
+        <!--Start of logging dependencies-->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <!--End of logging dependencies-->
     </dependencies>
     <build>
         <plugins>
@@ -68,15 +75,15 @@
             </plugin>
             <plugin>
                 <artifactId>maven-dependency-plugin</artifactId>
-            </plugin>  
+            </plugin>
             <plugin>
                 <groupId>org.apache.felix</groupId>
-                <artifactId>maven-bundle-plugin</artifactId>                
+                <artifactId>maven-bundle-plugin</artifactId>
                 <extensions>true</extensions>
                 <configuration>
                     <instructions>
                         <Embed-Dependency>*;scope=compile|runtime</Embed-Dependency>
-                        <Embed-Transitive>true</Embed-Transitive>       
+                        <Embed-Transitive>true</Embed-Transitive>
                         <Import-Package>com.jidesoft.combobox,*;resolution:=optional</Import-Package>
                         <Bundle-Activator>com.affymetrix.igb.tabs.annotation.Activator</Bundle-Activator>
                         <Bundle-Category>IGBTabPanel-com.affymetrix.igb.tabs.annotation.AnnotationTrackPanel</Bundle-Category>
@@ -85,7 +92,7 @@
                         <Bundle-SymbolicName>com.affymetrix.igb.tabs.annotation.AnnotationTrackPanel</Bundle-SymbolicName>
                     </instructions>
                 </configuration>
-            </plugin>            
+            </plugin>
         </plugins>
     </build>
 </project>
