--- a/plugins/BigBedHandler/pom.xml
+++ b/plugins/BigBedHandler/pom.xml
@@ -14,13 +14,13 @@
 
     <name>BigBedHandler</name>
 
-    
+
     <dependencies>
         <dependency>
             <groupId>org.broad</groupId>
             <artifactId>bigwig</artifactId>
             <scope>provided</scope>
-        </dependency>        
+        </dependency>
         <dependency>
             <groupId>com.affymetrix</groupId>
             <artifactId>igb</artifactId>
@@ -46,6 +46,13 @@
             <artifactId>tribble-ext</artifactId>
             <scope>provided</scope>
         </dependency>
+        <!--Start of logging dependencies-->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <!--End of logging dependencies-->
     </dependencies>
 
     <build>
@@ -55,15 +62,15 @@
             </plugin>
             <plugin>
                 <artifactId>maven-dependency-plugin</artifactId>
-            </plugin>       
+            </plugin>
             <plugin>
                 <groupId>org.apache.felix</groupId>
-                <artifactId>maven-bundle-plugin</artifactId>                
+                <artifactId>maven-bundle-plugin</artifactId>
                 <extensions>true</extensions>
                 <configuration>
                     <instructions>
                         <Embed-Dependency>*;scope=compile|runtime</Embed-Dependency>
-                        <Embed-Transitive>true</Embed-Transitive>       
+                        <Embed-Transitive>true</Embed-Transitive>
                         <Import-Package>com.affymetrix.igb.shared,*;resolution:=optional</Import-Package>
                         <Export-Package/>
                         <Bundle-Category>FileTypeHandler-com.gene.bigbedhandler.BigBedHandler</Bundle-Category>
@@ -73,7 +80,7 @@
                         <Bundle-Description>plugin to allow the user to load BigBed files</Bundle-Description>
                     </instructions>
                 </configuration>
-            </plugin>            
+            </plugin>
         </plugins>
     </build>
 </project>
