--- a/plugins/BigWigHandler/pom.xml
+++ b/plugins/BigWigHandler/pom.xml
@@ -15,18 +15,18 @@
 
     <name>BigWigHandler</name>
 
-    
-        
-        
-        
-    
+
+
+
+
+
 
     <dependencies>
         <dependency>
             <groupId>org.broad</groupId>
             <artifactId>bigwig</artifactId>
             <scope>provided</scope>
-        </dependency>        
+        </dependency>
         <dependency>
             <groupId>com.affymetrix</groupId>
             <artifactId>igb</artifactId>
@@ -57,6 +57,13 @@
             <artifactId>colt</artifactId>
             <scope>provided</scope>
         </dependency>
+        <!--Start of logging dependencies-->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <!--End of logging dependencies-->
     </dependencies>
 
     <build>
@@ -66,7 +73,7 @@
             </plugin>
             <plugin>
                 <artifactId>maven-dependency-plugin</artifactId>
-            </plugin>      
+            </plugin>
             <plugin>
                 <groupId>org.apache.felix</groupId>
                 <artifactId>maven-bundle-plugin</artifactId>
@@ -74,7 +81,7 @@
                 <configuration>
                     <instructions>
                         <Embed-Dependency>*;scope=compile|runtime</Embed-Dependency>
-                        <Embed-Transitive>true</Embed-Transitive>       
+                        <Embed-Transitive>true</Embed-Transitive>
                         <Import-Package>com.affymetrix.igb.shared,*;resolution:=optional</Import-Package>
                         <Export-Package/>
                         <Bundle-Activator>com.gene.bigwighandler.Activator</Bundle-Activator>
@@ -84,7 +91,7 @@
                         <Bundle-Description>plugin to allow the user to load BigWig files</Bundle-Description>
                     </instructions>
                 </configuration>
-            </plugin>            
+            </plugin>
         </plugins>
     </build>
 </project>
