--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.affymetrix</groupId>
     <artifactId>igb-project</artifactId>
-    <version>8.2</version>
+    <version>8.3-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <name>IGB Project</name>
