added alternative message when loading reference sequence data

--- a/core/genometryImpl/src/main/resources/genometry.properties
+++ b/core/genometryImpl/src/main/resources/genometry.properties
@@ -87,6 +87,7 @@ color_by_strand=Strand
 
 #messages
 howtoloadmessage=To display your data, zoom in and click Load Data
+howToLoadReferenceSequence=To display your reference sequence data, zoom in and click Load Sequence
 show_how_to_load=Show how to load
 
 #errors
