added alternative message when loading reference sequence data (support for html in this message added) refactored isTrack to isReferenceSequence and inverted booleans as needed to match new name

--- a/core/genometryImpl/src/main/resources/genometry.properties
+++ b/core/genometryImpl/src/main/resources/genometry.properties
@@ -87,7 +87,7 @@ color_by_strand=Strand
 
 #messages
 howtoloadmessage=To display your data, zoom in and click Load Data
-howToLoadReferenceSequence=To display your reference sequence data, zoom in and click Load Sequence
+howToLoadReferenceSequence=<html>To display sequence data, zoom in and click the <b>Load Sequence</b> button (top right).</html>
 show_how_to_load=Show how to load
 
 #errors
